# learning-materials

./: .gitignore  README.md
learning-bazel/projeto-01/: bazel-bin  bazel-out  bazel-projeto-01  bazel-testlogs
learning-bazel/projeto-01/projectA/: BUILD.bazel
learning-bazel/projeto-02/: WORKSPACE.bazel  bazel-bin  bazel-out  bazel-projeto-02  bazel-projeto-03  bazel-testlogs
learning-bazel/projeto-02/calculator/: BUILD.bazel  calculator_test.py
learning-bazel/projeto-02/my-python-app/: BUILD.bazel  main.py
learning-bazel/projeto-02/thirdpp/: requirements.txt
